--- a/FinMan/Resources/layout/Category.axml
+++ b/FinMan/Resources/layout/Category.axml
@@ -1,77 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical"
-    >
-  <RelativeLayout
-      android:orientation="horizontal"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/myDrawer"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+  <FrameLayout
+      android:id="@+id/content_frame"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:id="@+id/targetLayout">
-    <TextView
-        android:text="My Target"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+      android:layout_height="match_parent">
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/myTargetText"
-        android:layout_centerHorizontal="true" />
-    <TextView
-        android:text=""
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/myTargetCategoryText"
-        android:layout_below="@id/myTargetText"
-        android:layout_alignParentLeft="true"
-          android:layout_marginTop="10dp"
-        />
-    <ProgressBar
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:id="@+id/targetProgressBar"
-       style="@style/tallerBarStyle"
-       android:layout_below="@id/myTargetCategoryText"
-       android:layout_marginTop="10dp"
-  />
-    <RelativeLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/targetContentLayout"
-        android:layout_below="@id/targetProgressBar">
-      <TextView
-          android:text=""
-          android:textAppearance="?android:attr/textAppearanceMedium"
-          android:layout_width="wrap_content"
+        android:orientation="vertical">
+      <RelativeLayout
+          android:orientation="horizontal"
+          android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:id="@+id/allowedText"
-          android:layout_alignParentLeft="true" />
-      <TextView
-          android:text=""
-          android:textAppearance="?android:attr/textAppearanceMedium"
-          android:layout_width="wrap_content"
+          android:id="@+id/targetLayout">
+        <TextView
+            android:text="My Target"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/myTargetText"
+            android:layout_centerHorizontal="true" />
+        <TextView
+            android:text=""
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/myTargetCategoryText"
+            android:layout_below="@id/myTargetText"
+            android:layout_alignParentLeft="true"
+            android:layout_marginTop="10dp" />
+        <ProgressBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/targetProgressBar"
+            style="@style/tallerBarStyle"
+            android:layout_below="@id/myTargetCategoryText"
+            android:layout_marginTop="10dp" />
+        <RelativeLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/targetContentLayout"
+            android:layout_below="@id/targetProgressBar">
+          <TextView
+              android:text=""
+              android:textAppearance="?android:attr/textAppearanceMedium"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:id="@+id/allowedText"
+              android:layout_alignParentLeft="true" />
+          <TextView
+              android:text=""
+              android:textAppearance="?android:attr/textAppearanceMedium"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:id="@+id/spentText"
+              android:layout_alignParentRight="true" />
+        </RelativeLayout>
+      </RelativeLayout>
+      <LinearLayout
+          android:orientation="vertical"
+          android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:id="@+id/spentText"
-          android:layout_alignParentRight="true" />
-    </RelativeLayout>
-  </RelativeLayout>
-  <TextView
-         android:text="August 2017"
-         android:textAppearance="?android:attr/textAppearanceLarge"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:id="@+id/monthText"
-         android:layout_centerHorizontal="true" />
-  <LinearLayout
-      android:orientation="horizontal"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="20dp"
-      android:id="@+id/categoryLayout">
-    <com.nulana.NChart.NChartView
-        android:id="@+id/nchart3d"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content" />
-  </LinearLayout>
-</LinearLayout>
+          android:layout_marginTop="20dp"
+          android:id="@+id/categoryLayout">
+        <TextView
+            android:text="September 2017"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/monthText"
+            android:layout_marginLeft="80dp" />
+        <com.nulana.NChart.NChartView
+            android:id="@+id/nchart3d"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content" />
+      </LinearLayout>
+    </LinearLayout>
+  </FrameLayout>
+  <ListView
+      android:id="@+id/leftListView"
+      android:layout_width="240dp"
+      android:layout_height="match_parent"
+      android:layout_gravity="left"
+      android:choiceMode="singleChoice"
+      android:divider="#D2D2D2"
+      android:dividerHeight="2dp"
+      android:background="#228b22"/>
+</android.support.v4.widget.DrawerLayout>
